# pyrbmi

./: .Rprofile  .gitignore  .licenserc.yaml  .pre-commit-config.yaml  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SPDX_HEADER_TEMPLATE.txt  TODO.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  MAJOR_UPGRADE_TEMPLATE.md  dependabot.yml
.github/workflows/: build-r-base.yml  ci.yml  dependabot-auto-merge.yml  docs.yml  license-check.yml  release.yml  validate-r.yml
docker/r-validation/: Dockerfile
docs/: changelog.md  contributing.md  index.md
docs/api/: pyrbmi.md
docs/user-guide/: api-quick.md  getting-started.md  strategies.md
docs/validation/: index.md  r-parity.md
src/pyrbmi/: __init__.py  covariance.py  data.py  imputer.py  pool.py  strategy.py  validators.py
src/pyrbmi/models/: __init__.py  mmrm.py
tests/: test_mmrm.py  test_validators.py
